--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
             <nav class="header-nav">
                 <a class="logo link" href=" ./index.html">Web<span class="logo-studio-header">Studio</span></a>
                 <ul class="header-list list">
-                    <li class="header-item"> <a class="header-item-link link" href="./index.html">Studio</a></li>
-                    <li class="header-item"><a class="header-item-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="header-item"> <a class="header-item-link link " href="./index.html">Studio</a></li>
+                    <li class="header-item"><a class="header-item-link link current" href="./portfolio.html">Portfolio</a></li>
                     <li class="header-item"><a class="header-item-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
@@ -55,7 +55,12 @@
                 <ul class="projects-list list">
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-8.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-8.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Banking App Interface Concept</h2>
                                 <p class="projects-text list-text">App</p>
@@ -64,7 +69,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-7.jpg" alt="Cashless Payment" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-7.jpg" alt="Cashless Payment" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Cashless Payment</h2>
                                 <p class="projects-text list-text">Marketing</p>
@@ -73,7 +83,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-6.jpg" alt="Meditation App" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-6.jpg" alt="Meditation App" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Meditation App</h2>
                                 <p class="projects-text list-text">App</p>
@@ -82,7 +97,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-5.jpg" alt="Taxi Service" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-5.jpg" alt="Taxi Service" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Taxi Service</h2>
                                 <p class="projects-text list-text">Marketing</p>
@@ -91,7 +111,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-4.jpg" alt="Screen Illustrations" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-4.jpg" alt="Screen Illustrations" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Screen Illustrations</h2>
                                 <p class="projects-text list-text">Design</p>
@@ -100,7 +125,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-3.jpg" alt="Online Courses" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-3.jpg" alt="Online Courses" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Online Courses</h2>
                                 <p class="projects-text list-text">Marketing</p>
@@ -109,7 +139,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-2.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-2.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Instagram Stories Concept</h2>
                                 <p class="projects-text list-text">Design</p>
@@ -118,7 +153,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img-1.jpg" alt="Organic Food" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img-1.jpg" alt="Organic Food" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Organic Food</h2>
                                 <p class="projects-text list-text">Web Site</p>
@@ -127,7 +167,12 @@
                     </li>
                     <li class="projects-list-item">
                         <a class="projects-link link" href="">
-                            <img src="./images/img.jpg" alt="Fresh Coffee" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/img.jpg" alt="Fresh Coffee" width="360" height="300">
+                                <p class="projects-list-cover">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div>
                             <div class="projects-title-text">
                                 <h2 class="projects-title list-title">Fresh Coffee</h2>
                                 <p class="projects-text list-text">Web Site</p>
