--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
@@ -24,7 +23,7 @@
             <nav class="header-nav">
                 <a class="logo link" href=" ./index.html">Web<span class="logo-studio-header">Studio</span></a>
                 <ul class="header-list list">
-                    <li class="header-item"> <a class="header-item-link link" href="./index.html">Studio</a></li>
+                    <li class="header-item"> <a class="header-item-link link current" href="./index.html">Studio</a></li>
                     <li class="header-item"><a class="header-item-link link" href="./portfolio.html">Portfolio</a></li>
                     <li class="header-item"><a class="header-item-link link" href="">Contacts</a></li>
                 </ul>
@@ -46,7 +45,7 @@
         <section class="section hero">
             <div class="container">
                 <h1 class="caption">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-btn btn"> Order Service</button>
+                <button type="button" class="hero-btn btn" data-modal-open> Order Service</button>
             </div>
         </section>
 
@@ -378,7 +377,16 @@
             </div>
         </div>
     </footer>
-
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close" data-modal-close>
+                <svg width="8" height="8" class="icon-close">
+                    <use href="./images/icon.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
